--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
       
     - name: Set up SSH
       run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        mkdir -p ~/.ssh &&
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa &&
+        chmod 600 ~/.ssh/id_rsa &&
         ssh-keyscan -H ${{ secrets.HOST_NAME }} >> ~/.ssh/known_hosts
 
     - name: Deploy Frontend
