--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -25,5 +25,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "hooks/*": ["hooks/*"],
+      "components/*": ["components/*"]
+    }
   }
 }
