--- a/src/FE/jsconfig.json
+++ b/src/FE/jsconfig.json
@@ -7,6 +7,12 @@
             ],
             "components/*": [
                 "components/*"
+            ],
+            "utils/*" : [
+                "utils/*"
+            ],
+            "services/*" : [
+                "services/*"
             ]
         }
     }
