--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -6,7 +6,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +30,12 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "hooks/*": ["hooks/*"],
-      "components/*": ["components/*"]
+      "hooks/*": [
+        "hooks/*"
+      ],
+      "components/*": [
+        "components/*"
+      ]
     }
   }
 }
