--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "mysql2": "^3.11.3"
   },
   "scripts": {
-    "server": "npm run dev --prefix src\\server",
-    "FE": "npm start --prefix src\\FE",
+    "server": "npm run dev --prefix src/server",
+    "FE": "npm start --prefix src/FE",
     "dev": "concurrently \"npm run server\" \"npm run FE\"",
 
-    "postinstall": "(cd src\\server && npm install) && (cd ..\\..\\src\\FE && npm install)"
+    "postinstall": "(cd src/server && npm install) && (cd ../../src/FE && npm install)"
   }
 }
