--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "validator": "^13.12.0"
