--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -16,7 +16,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8000",
+  "options": {
+    "allowedHosts": ["localhost", ".localhost"],
+    "proxy": "http://localhost:8000"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
