--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
@@ -17,7 +19,10 @@
     "eject": "react-scripts eject"
   },
   "options": {
-    "allowedHosts": ["localhost", ".localhost"],
+    "allowedHosts": [
+      "localhost",
+      ".localhost"
+    ],
     "proxy": "http://localhost:8000"
   },
   "browserslist": {
@@ -40,6 +45,9 @@
       ],
       "components/*": [
         "components/*"
+      ],
+      "utils/*": [
+        "utils/*"
       ]
     }
   }
