update package.json npm install script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "FE": "npm start --prefix src/FE",
     "dev": "concurrently \"npm run server\" \"npm run FE\"",
 
-    "postinstall": "(cd src/server && npm install) && (cd ../../src/FE && npm install)"
+    "postinstall": "(cd src/server && npm install) && cd ../../src/FE && npm install"
   }
 }
