--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   Deploy:
@@ -26,7 +23,7 @@ jobs:
 
     - name: Deploy Frontend
       run: |
-        ssh ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} "cd QAirline/src/FE && git pull && npm install && npm run build && pm2 restart frontend"
+        ssh ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} "cd QAirline/src/FE && git pull && npm install && pm2 restart frontend"
 
     - name: Deploy Backend
       run: |
