--- a/src/FE/package.json
+++ b/src/FE/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "chart.js": "^4.4.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "validator": "^13.12.0"
@@ -52,6 +54,9 @@
       ],
       "contexts/*": [
         "contexts/*"
+      ],
+      "types/*": [
+        "types/*"
       ]
     }
   }
