--- a/src/server/package.json
+++ b/src/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "sequelize": "^6.37.5"
   }
